# techniques_de_test_2025_2026

./: .coverage  Makefile  README.md  pyproject.toml
TP/: Makefile  PLAN.md  RETEX.md
TP/tests/: test_api.py  test_perf.py  test_serialization.py  test_services.py  test_triangulation_logic.py  test_utils.py
TP/tests/perf/: test_perf.py  test_perf_placeholder.py
TP/triangulator/: __init__.py  app.py  models.py  services.py  utils.py
TP/triangulator.egg-info/: SOURCES.txt
docs/: index.html  search.js
docs/TP/: triangulator.html
docs/TP/triangulator/: app.html  app.md  index.md  models.html  services.html  services.md  utils.html  utils.md
triangulator.egg-info/: PKG-INFO  SOURCES.txt
