[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "triangulator"
version = "0.1.0"
dependencies = [
    "flask",
]

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
where = ["TP"]      
include = ["triangulator*"]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "UP",
    "SIM",
    "B",
    "I",
]
ignore = ["D203", "D213"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
